Copied files from Teacher's Example Guide.